# blue-vending-machine

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci-cloudrun.yml  frontend-ci-vercel.yml
backend/: .env.example  .gcloudignore  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: error.rs  lib.rs  main.rs  models.rs  router.rs
backend/src/domain/: money.rs
backend/src/handlers/: cash.rs  mod.rs  products.rs  purchase.rs  transactions.rs
backend/src/repositories/: cash.rs  mod.rs  products.rs  transactions.rs
backend/tests/: api_db_integration.rs  api_validation_integration.rs  money_integration.rs
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/__tests__/: AdminPanel.test.tsx  ProductGrid.test.tsx  ProductImage.test.tsx  VendingMachine.test.tsx  format.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AdminPanel.tsx  ProductGrid.tsx  ProductImage.tsx  VendingMachine.tsx
frontend/lib/: api.ts  format.ts  types.ts
